--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,2 +1,25 @@
 // main.styl
 @import '../../node_modules/vuetify/src/stylus/main'
+
+table.table tbody td, table.table tbody th 
+    height: 30px !important
+    
+.item-elements-list a 
+    height: 30px !important
+  
+button.xs
+    width: 25px !important
+    height: 25px !important
+    margin: 3 !important
+    >div
+        padding: 3px !important
+        >i
+            height: 12px !important
+            width: 12px !important
+            line-height: 12px !important
+
+.comment-content > p
+    margin-bottom: 0
+
+.ql-tooltip
+    z-index: 1000000 !important
