--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,6 +1,10 @@
 // main.styl
 @import '~vuetify/src/stylus/main'
 
+.main-sidebar
+    .list__tile
+        height: 30px !important
+
 table.table tbody td,
 table.table tbody th 
     height: 30px !important
