--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -7,18 +7,20 @@
 
 table.table
     tbody
-        td, th
-            height: 30px !important
-            padding: 0px 5px 0px 5px !important
-        // td, th
-        //     height: 28px !important
-        //     padding: 2px 5px 2px 5px !important
-        //     vertical-align: top !important
-        //     .checkbox
-        //         .input-group__input
-        //             min-height: 24px !important
-        //         .icon--selection-control
-        //             height: 24px !important
+        tr
+            cursor:pointer !important
+            td, th
+                height: 30px !important
+                padding: 0px 5px 0px 5px !important
+            // td, th
+            //     height: 28px !important
+            //     padding: 2px 5px 2px 5px !important
+            //     vertical-align: top !important
+            //     .checkbox
+            //         .input-group__input
+            //             min-height: 24px !important
+            //         .icon--selection-control
+            //             height: 24px !important
 
 table.table thead tr:not(.datatable__progress)
     height: 30px
