--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -15,6 +15,8 @@ table.v-table
     tbody
         tr
             cursor:pointer !important
+            &.current-row
+                background-color: #ddd
             &.row-active
                 // box-shadow:4px -1px 0px 0px rgb(76, 175, 80) inset
             &.row-inactive
