#77 add treeview to template

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -28,3 +28,12 @@
     background-color: #ccc
     border-radius: 5px
     display: inline-block
+
+.v-treeview-node__root
+    margin-top: 5px
+    border: 1px solid #ccc
+
+.v-treeview > .v-treeview-node.v-treeview-node--leaf
+    margin-left: 0
+    > .v-treeview-node__root
+        padding-left: 24px
